--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <li><a href="https://amarnathprajapati.github.io/musicApp/">listen Your Favourite Song</a></li>
             <li><a href="https://amarnathprajapati.github.io/QuickNews_App/">Get Daily News</a></li>
             <li><a href="https://amarnathprajapati.github.io/textutils/">Text Manipulator</a></li>
-            <li><a href="https://amarnathprajapati.github.io/NoteMaker/">Note Maker</a></li>
+            <li><a href="https://amarnathprajapati.github.io/NoteMaker/">Take your Notes</a></li>
+            <li><a href="https://amarnathprajapati.github.io/Calculator/">Calculator</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -45,42 +46,42 @@
         
         <div class="imgContainer">
             <img src="images/s1.jpg" class="imgFlex" height="275px" id="s1" alt="Ecommerce"/>
-                <div class="price">$1000</div>
+                <div class="price">₹1000</div>
                 <button>Buy Now</button>
         </div>
         <div class="imgContainer">
             <img src="images/s2.webp" class="imgFlex" height="275px" alt="Ecommerce"/>
-            <div class="price">$1000</div>
+            <div class="price">₹1000</div>
                 <button>Buy Now</button>
         </div>
         <div class="imgContainer">
             <img src="images/s3.jpg" class="imgFlex" height="275px" alt="Ecommerce"/>
-                <div class="price">$1000</div>
+                <div class="price">₹1000</div>
                 <button>Buy Now</button>
         </div>
         <div class="imgContainer">
             <img src="images/s4.webp" class="imgFlex" height="275px" height="300px" alt="Ecommerce"/>
-                <div class="price">$1001</div>
+                <div class="price">₹1001</div>
                 <button >Buy Now</button>
         </div>
         <div class="imgContainer">
             <img src="images/s5.png" class="imgFlex" height="275px" alt="Ecommerce"/>
-                <div class="price">$1000</div>
+                <div class="price">₹1000</div>
                 <button>Buy Now</button>
         </div>
         <div class="imgContainer">
             <img src="images/s6.png" class="imgFlex" height="275px" alt="Ecommerce"/>
-                <div class="price">$1000</div>
+                <div class="price">₹1000</div>
                 <button>Buy Now</button>
         </div>
         <div class="imgContainer">
             <img src="images/s8.png" class="imgFlex" height="275px" height="225px" alt="Ecommerce"/>
-                <div class="price">$1000</div>
+                <div class="price">₹1000</div>
                 <button>Buy Now</button>
         </div>
         <div class="imgContainer">
             <img src="images/s7.jpg" class="imgFlex" height="275px" height="225px" alt="Ecommerce"/>
-                <div class="price">$1000</div>
+                <div class="price">₹1000</div>
                 <button>Buy Now</button>
         </div>
     </div>
@@ -89,42 +90,42 @@
         <div id="feature">
             <div class="imgContainer">
                 <img src="images/m1.jpg" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/m2.jpg" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/m3.jpeg" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/m4.jpg" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/m5.jpg" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/m6.webp" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/m7.jpg" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/m8.webp" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
         </div>
@@ -134,42 +135,42 @@
         <div id="feature">
             <div class="imgContainer">
                 <img src="images/w1.webp" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button> 
             </div>
             <div class="imgContainer">
                 <img src="images/w2.webp" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/w3.jpg" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/w4.webp" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/w5.jpg" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/w6.webp" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/w7.webp" class="imgFlex" height="275px" id="shoes1" alt="Ecommerce"/>
-                    <div class="price">$100</div>
+                    <div class="price">₹100</div>
                     <button id="bt11">Buy Now</button>
             </div>
             <div class="imgContainer">
                 <img src="images/w8.jpeg" class="imgFlex" height="275px" alt="Ecommerce"/>
-                    <div class="price">$1000</div>
+                    <div class="price">₹1000</div>
                     <button>Buy Now</button>
             </div>
         </div>
